# image-gif

./: Cargo.toml  README.md  clippy.toml
src/: encoder.rs  io.rs  lib.rs  traits.rs
src/reader/: converter.rs  decoder.rs  mod.rs
tests/: decode.rs
